--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Complete DFT Engineering Blog Series - Learn Design for Testability from basics to production. ATPG, BIST, Scan Chain, Boundary Scan tutorials by Praveen Kumar Vagala.">
+    <meta name="keywords" content="DFT, Design for Testability, ATPG, BIST, Scan Chain, VLSI, Semiconductor, Verilog, JTAG, Boundary Scan">
+    <meta name="author" content="Praveen Kumar Vagala">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="DFT Engineering Blog Series">
+    <meta property="og:description" content="Learn Design for Testability from basics to production - 11 part comprehensive guide.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://vlsi-praveen.github.io/dft-blog">
+    <link rel="canonical" href="https://vlsi-praveen.github.io/dft-blog">
     <title>DFT Engineering Blog Series</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
